--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -14,6 +14,10 @@ code {
     monospace;
 }
 
+/* ::-webkit-scrollbar {
+  display: none;
+} */
+
 /* :root {
   background-color: aqua;
   width: 340px;
@@ -51,6 +55,19 @@ code {
   font-size: 12px;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+select {
+  border-right: 16px solid transparent
+}
 
 
 @tailwind base;
