finishing register gor page

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -91,6 +91,17 @@ select {
 
 }
 
+/*======= Map Styling ============*/
+.gmnoprint a, .gmnoprint span {
+  display:none;
+}
+.gmnoprint div {
+  background:none !important;
+}
+#GMapsID div div a div img{
+  display:none;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
